Bugfix: Button text should be center-aligned

--- a/packages/foundations-buttons/src/buttons.pcss
+++ b/packages/foundations-buttons/src/buttons.pcss
@@ -6,6 +6,7 @@
   display: inline-block;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   height: 3.25rem; /* 52px / 16 */
   padding: var(--spacing-16) calc(var(--spacing-16) * 1.25);
   color: var(--color-white);
